--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "coordinate-transfer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/bundle.js",
   "module": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
