--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0"
+  },
+  "dependencies": {
+    "rollup-plugin-filesize": "^6.2.1"
   }
 }
