--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coordinate-transfer",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "",
   "main": "dist/bundle.js",
   "module": "src/index.js",
@@ -14,7 +14,10 @@
     "@babel/preset-env": "^7.6.3",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript": "^1.0.1",
+    "tslib": "^1.10.0",
+    "typescript": "^3.6.4"
   },
   "dependencies": {
     "rollup-plugin-filesize": "^6.2.1"
