--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/bundle.js",
   "module": "src/index.js",
+  "typings": "types/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
