--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "coordinate-transfer",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "",
   "main": "dist/bundle.js",
   "module": "src/index.js",
   "typings": "types/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c"
   },
   "author": "",
   "license": "ISC",
